# relation-extraction

./: .gitignore  pyproject.toml
config/: config.yaml
config/dataset/: default.yaml
config/model/: default.yaml
config/path/: default.yaml
config/prompt/: default.yaml  entity_tag_ner_relation.yaml  ner_relation.yaml  relation.yaml
config/rag/: default.yaml
notebooks/: dataset.ipynb
notebooks/config/: config.yaml
notebooks/config/path/: default.yaml
notebooks/config/prompt/: ner_relation.yaml
notebooks/config/rag/: default.yaml
src/: evaluation.py  main.py  preprocess.py
src/dataset/: __init__.py  conversion.py  preprocess.py
src/llm/: __init__.py  prompt.py  relation_extractor.py  utils.py
src/rag/: __init__.py  collection.py  utils.py
